--- a/gilieye/header/header.css
+++ b/gilieye/header/header.css
@@ -8,6 +8,7 @@ input{
 	width:960px;
 	margin: 0 auto;
 	position: relative;
+	
 }
 .header:after{
 	content: '.';
@@ -67,12 +68,12 @@ input{
 	right: 4px;
 	top: 0;
 }
-.login_register{
+.header_login_register{
 	margin: 10px 0;
 	width: 158px;
 	height:40px;
 }
-.login{
+.header_login{
 	height: 38px;
 	border-radius: 20px;
 	width:72px;
@@ -83,7 +84,7 @@ input{
 	border: 1px solid  #ffbb00;
 	cursor: pointer;
 }
-.register{
+.header_register{
 	height: 38px;
 	border-radius: 20px;
 	width:72px;
@@ -105,9 +106,10 @@ input{
 	color: #fff;
 	border-radius: 0 0 10px 10px;
 	cursor: pointer;
-	
+	box-shadow: 0 0 10px #a09f9f;
+	z-index: 1;
 }
-.closeX{
+/*.closeX{
 	position: absolute;
     right: -40px;
     background: rgb(255,255,255);
@@ -118,48 +120,20 @@ input{
     color: #666;
     border-radius: 50%;
     top: -30px;
-}
-.close{
+}*/
+/*.close{
 	opacity: 1;
-}
-
-
-.modal-header{
-	padding: 0;
-}
-.title{
-	position: relative;
-	overflow: hidden;
-	margin: 0 auto;
-	width:140px;
-}
-.loginC,.registerC{
-	width: 70px;
-	height: 30px;
-	line-height: 30px;
-	text-align: center;
-	float: left;
-	cursor: pointer;
-}
-.bottomLine{
-	height: 2px;
-	width: 70px;
-	position: absolute;
-	left: 0;
-	background: orange;
-	overflow: hidden;
-	bottom: -1px;
-}
-.col{
+}*/
+/*.col{
 	color: orange;
-}
-.dis{
+}*/
+/*.dis{
 	display: none;
-}
-.modal-footer{
+}*/
+/*.modal-footer{
 	text-align: center!important;
 }
 .modal-backdrop.in {
     filter: alpha(opacity=30)!important;
     opacity: .3!important;			
-}
+}*/
